<resources>
    <string name="app_name">Coins</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="costa_rica">Costa Rica</string>
    <string name="honduras">Honduras</string>
    <string name="guatemala">Guatemala</string>
    <string name="el_salvador">El Salvador</string>
    <string name="todos">Todos</string>
    <string name="n_a_value">N/A</string>
    <string name="filter_label">Filtrar por pais</string>
    <string name="alert_person_not_saved">No se ha podido guardar. Inténtelo luego.</string>
    <string name="alert_person_saved_success">Se ha guardado con éxito la persona #</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="country">Country</string>
    <string name="value">Value</string>
    <string name="review">Review</string>
    <string name="disponible">Disponible</string>
    <string name="year">Año</string>
    <string name="valor">Valor</string>
    <string name="valor_us">Valor US</string>
    <string name="available">Available</string>
    <string name="update">Update</string>
    <string name="action_update">Update</string>
</resources>
