<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:gravity="center">


    <TextView
            android:id="@+id/name_main_content_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/n_a_value"
            android:textColor="@android:color/black"
            android:textSize="40dp"/>


    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_main_content_fragment"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:src="@drawable/ic_launcher_background"/>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_marginTop="8dp">


        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                >

                    <TextView
                            android:layout_gravity="center_horizontal"
                            android:layout_width="wrap_content"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:layout_marginBottom="4dp"
                            android:textColor="@android:color/black"
                            android:text="@string/valor"
                            android:textStyle="bold"
                    />

                    <TextView
                            android:layout_gravity="center_horizontal"
                            android:id="@+id/value_main_content_fragment"
                            android:textColor="@android:color/black"
                            android:layout_width="wrap_content"
                            android:layout_weight="3"
                            android:layout_height="wrap_content"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:layout_marginBottom="4dp"

                            android:text="@string/n_a_value"
                    />

                </LinearLayout>
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                >

                    <TextView
                            android:textColor="@android:color/black"
                            android:layout_gravity="center_horizontal"
                            android:layout_width="wrap_content"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:layout_marginBottom="4dp"

                            android:text="@string/valor_us"
                            android:textStyle="bold"
                    />

                    <TextView
                            android:id="@+id/value_us_main_content_fragment"
                            android:textColor="@android:color/black"
                            android:layout_gravity="center_horizontal"
                            android:layout_width="wrap_content"
                            android:layout_weight="3"
                            android:layout_height="wrap_content"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:layout_marginBottom="4dp"

                            android:text="@string/n_a_value"
                    />

                </LinearLayout>

                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                >

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:layout_marginBottom="4dp"
                            android:textColor="@android:color/black"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/country"
                            android:textStyle="bold"
                    />

                    <TextView
                            android:id="@+id/country_main_content_fragment"
                            android:textColor="@android:color/black"
                            android:layout_gravity="center_horizontal"
                            android:layout_width="wrap_content"
                            android:layout_weight="3"
                            android:layout_height="wrap_content"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:layout_marginBottom="4dp"

                            android:text="@string/n_a_value"
                    />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_weight="1"
                          android:orientation="vertical">

                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                >

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:layout_marginBottom="4dp"
                            android:textColor="@android:color/black"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/year"
                            android:textStyle="bold"
                    />

                    <TextView
                            android:id="@+id/year_main_content_fragment"

                            android:layout_width="wrap_content"
                            android:layout_weight="3"
                            android:layout_height="wrap_content"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:layout_marginBottom="4dp"
                            android:textColor="@android:color/black"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/n_a_value"
                    />

                </LinearLayout>

                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                >

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:layout_marginBottom="4dp"
                            android:textColor="@android:color/black"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/review"
                            android:textStyle="bold"
                    />

                    <TextView
                            android:id="@+id/review_main_content_fragment"

                            android:layout_width="wrap_content"
                            android:layout_weight="3"
                            android:layout_height="wrap_content"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:layout_marginBottom="4dp"
                            android:textColor="@android:color/black"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/n_a_value"
                    />

                </LinearLayout>
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                >

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:layout_marginBottom="4dp"
                            android:textColor="@android:color/black"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/available"
                            android:textStyle="bold"
                    />

                    <TextView
                            android:id="@+id/available_main_content_fragment"
                            android:layout_gravity="center_horizontal"
                            android:layout_width="wrap_content"
                            android:layout_weight="3"
                            android:layout_height="wrap_content"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:layout_marginBottom="4dp"
                            android:textColor="@android:color/black"

                            android:text="@string/n_a_value"
                    />

                </LinearLayout>


            </LinearLayout>


        </LinearLayout>

    </ScrollView>


</LinearLayout>