<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:background="#57606f"

                                                 tools:context=".Activities.CoinViewer">

    <android.support.design.widget.AppBarLayout
            android:id="@+id/appbarviewer"
            android:layout_width="match_parent"
            android:layout_height="256dp"
            android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsingtoolbarviewer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:collapsedTitleTextAppearance="@style/CollapsedAppBar"
                app:contentScrim="#a4b0be"
                app:expandedTitleTextAppearance="@style/ExpandedAppBar"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"
                app:title="@string/n_a_value"
                android:background="#57606f"
                app:toolbarId="@id/toolbarviewer">

            <ImageView
                    android:id="@+id/app_bar_image_viewer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax" />


            <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbarviewer"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
            >

                <TextView
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:layout_marginBottom="4dp"
                        android:text="Pais"
                        android:textColor="#f1f2f6"
                        android:textSize="@dimen/font_details_size"
                        android:textStyle="bold"
                />

                <TextView
                        android:id="@+id/country_main_content_fragment"
                        android:textColor="#f1f2f6"
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:layout_marginBottom="4dp"

                        android:text="@string/n_a_value"
                        android:textSize="@dimen/font_details_size"
                />

            </LinearLayout>

            <LinearLayout
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:padding="8dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
            >

                <TextView
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:layout_marginBottom="4dp"
                        android:textColor="#f1f2f6"

                        android:text="@string/valor"
                        android:textSize="@dimen/font_details_size"
                        android:textStyle="bold"
                />

                <TextView
                        android:id="@+id/value_main_content_fragment"

                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:layout_marginBottom="4dp"
                        android:textColor="#f1f2f6"

                        android:text="@string/n_a_value"
                        android:textSize="@dimen/font_details_size"
                />

            </LinearLayout>

            <LinearLayout
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:padding="8dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
            >

                <TextView
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:layout_marginBottom="4dp"
                        android:textColor="#f1f2f6"

                        android:text="@string/valor_us"
                        android:textSize="@dimen/font_details_size"
                        android:textStyle="bold"
                />

                <TextView
                        android:id="@+id/value_us_main_content_fragment"

                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:layout_marginBottom="4dp"
                        android:textColor="#f1f2f6"

                        android:text="@string/n_a_value"
                        android:textSize="@dimen/font_details_size"
                />

            </LinearLayout>

            <LinearLayout
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:padding="8dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
            >

                <TextView
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:layout_marginBottom="4dp"
                        android:textColor="#f1f2f6"

                        android:text="@string/year"
                        android:textSize="@dimen/font_details_size"
                        android:textStyle="bold"
                />

                <TextView
                        android:id="@+id/year_main_content_fragment"
                        android:textColor="#f1f2f6"

                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:layout_marginBottom="4dp"

                        android:text="@string/n_a_value"
                        android:textSize="@dimen/font_details_size"
                />

            </LinearLayout>
            <LinearLayout
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:padding="8dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
            >

                <TextView
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:layout_marginBottom="4dp"
                        android:textColor="#f1f2f6"

                        android:text="@string/review"
                        android:textSize="@dimen/font_details_size"
                        android:textStyle="bold"
                />

                <TextView
                        android:id="@+id/review_main_content_fragment"

                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:layout_marginBottom="4dp"
                        android:textColor="#f1f2f6"

                        android:text="@string/n_a_value"
                        android:textSize="@dimen/font_details_size"
                />

            </LinearLayout>
            <LinearLayout
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:padding="8dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
            >

                <TextView
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:layout_marginBottom="4dp"
                        android:textColor="#f1f2f6"

                        android:text="@string/disponible"
                        android:textSize="@dimen/font_details_size"
                        android:textStyle="bold"
                />

                <TextView
                        android:id="@+id/available_main_content_fragment"

                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:layout_marginBottom="4dp"
                        android:textColor="#f1f2f6"

                        android:text="@string/n_a_value"
                        android:textSize="@dimen/font_details_size"
                />

            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>